--- a/lib/hyacinth_web/live/dataset_live/index.html.heex
+++ b/lib/hyacinth_web/live/dataset_live/index.html.heex
@@ -2,7 +2,7 @@
   <div>
     <h1 class="text-4xl">Datasets</h1>
     <div class="mt-3">
-      <.form let={f} for={@filter_changeset} phx-change="filter_updated">
+      <.form let={f} for={@dataset_filter_changeset} phx-change="dataset_filter_updated">
         <div class="filter-form-content flex justify-between items-center">
           <p>
             <%= text_input f, :search, placeholder: "Search datasets...", class: "mr-2" %>
@@ -10,15 +10,15 @@
           <div class="flex items-center space-x-3">
             <p>
               <%= label f, :type %>
-              <%= select f, :type, Ecto.Enum.values(FilterOptions, :type) %>
+              <%= select f, :type, humanize_enum(DatasetFilterForm, :type) %>
             </p>
             <p>
               <%= label f, :sort_by %>
-              <%= select f, :sort_by, Ecto.Enum.values(FilterOptions, :sort_by), class: "basic-select" %>
+              <%= select f, :sort_by, humanize_enum(DatasetFilterForm, :sort_by) %>
             </p>
             <p>
               <%= label f, :order %>
-              <%= select f, :order, Ecto.Enum.values(FilterOptions, :order) %>
+              <%= select f, :order, humanize_enum(DatasetFilterForm, :order) %>
             </p>
           </div>
         </div>
@@ -29,7 +29,7 @@
 
 <main class="mt-6">
   <div class="grid grid-cols-3 gap-4">
-    <%= for {dataset, object_count, job_count} <- filter_datasets(@datasets, @filter_changeset) do %>
+    <%= for {dataset, object_count, job_count} <- filter_datasets(@datasets, @dataset_filter_changeset) do %>
       <%= live_redirect to: Routes.live_path(@socket, HyacinthWeb.DatasetLive.Show, dataset),
           class: "p-2 bg-gray-800 rounded border border-gray-700 hover:border-gray-500 transition" do %>
         <div class="flex justify-between items-start space-x-4">
