--- a/lib/hyacinth_web/live/pipeline_live/index.html.heex
+++ b/lib/hyacinth_web/live/pipeline_live/index.html.heex
@@ -8,7 +8,7 @@
       <% end %>
     </div>
     <div class="mt-3">
-      <.form let={f} for={@filter_changeset} phx-change="filter_updated">
+      <.form let={f} for={@pipeline_filter_changeset} phx-change="pipeline_filter_updated">
         <div class="filter-form-content flex justify-between items-center">
           <p>
             <%= text_input f, :search, placeholder: "Search pipelines...", class: "mr-2" %>
@@ -16,11 +16,11 @@
           <div class="flex items-center space-x-3">
             <p>
               <%= label f, :sort_by %>
-              <%= select f, :sort_by, Ecto.Enum.values(PipelineFilterOptions, :sort_by), class: "basic-select" %>
+              <%= select f, :sort_by, humanize_enum(PipelineFilterForm, :sort_by) %>
             </p>
             <p>
               <%= label f, :order %>
-              <%= select f, :order, Ecto.Enum.values(PipelineFilterOptions, :order) %>
+              <%= select f, :order, humanize_enum(PipelineFilterForm, :order) %>
             </p>
           </div>
         </div>
@@ -29,9 +29,9 @@
   </div>
 </header>
 
-<main class="mt-6">
+<main class="mt-4">
   <div class="grid grid-cols-3 gap-4">
-    <%= for pipeline <- filter_pipelines(@pipelines, @filter_changeset) do %>
+    <%= for pipeline <- filter_pipelines(@pipelines, @pipeline_filter_changeset) do %>
       <%= live_redirect to: Routes.live_path(@socket, HyacinthWeb.PipelineLive.Show, pipeline), class: "card link-card" do %>
         <div class="flex justify-between items-start space-x-4">
           <div class="shrink text-sm text-gray-300 font-medium"><%= pipeline.name %></div>
