--- a/lib/hyacinth_web/live/label_job_live/show.html.heex
+++ b/lib/hyacinth_web/live/label_job_live/show.html.heex
@@ -44,20 +44,20 @@
       <.form let={f} for={@session_filter_changeset} phx-change="session_filter_updated">
         <div class="filter-form-content flex justify-between items-center">
           <p>
-            <%= text_input f, :search, placeholder: "Search session users...", class: "mr-2 w-80" %>
+            <%= text_input f, :search, placeholder: "Search sessions...", class: "mr-2 w-80" %>
           </p>
           <div class="flex items-center space-x-3">
             <p>
               <%= label f, :type %>
-              <%= select f, :type, Ecto.Enum.values(SessionFilterOptions, :type) %>
+              <%= select f, :type, humanize_enum(SessionFilterForm, :type) %>
             </p>
             <p>
               <%= label f, :sort_by %>
-              <%= select f, :sort_by, Ecto.Enum.values(SessionFilterOptions, :sort_by), class: "basic-select" %>
+              <%= select f, :sort_by, humanize_enum(SessionFilterForm, :sort_by) %>
             </p>
             <p>
               <%= label f, :order %>
-              <%= select f, :order, Ecto.Enum.values(SessionFilterOptions, :order) %>
+              <%= select f, :order, humanize_enum(SessionFilterForm, :order) %>
             </p>
           </div>
         </div>
