--- a/lib/hyacinth_web/live/pipeline_live/show.html.heex
+++ b/lib/hyacinth_web/live/pipeline_live/show.html.heex
@@ -44,7 +44,7 @@
             </p>
             <p>
               <%= label f, :sort_by %>
-              <%= select f, :sort_by, humanize_enum(RunFilterForm, :sort_by), class: "basic-select" %>
+              <%= select f, :sort_by, humanize_enum(RunFilterForm, :sort_by) %>
             </p>
             <p>
               <%= label f, :order %>
@@ -78,16 +78,31 @@
               <span class="text-gray-400"><%= run.ran_by.email %></span>
             </div>
 
-            <div class="mt-2 text-xs text-gray-400">
+            <div class="mt-2 text-sm text-gray-400">
               <%= for tr <- run.transform_runs do %>
-                <div>
-                  <span class="">Step <%= tr.order_index + 1 %>:</span>
-                  <span><%= tr.status %></span>
+                <div class="flex items-center space-x-1">
+                  <div>
+                    <%= case tr.status do %>
+                    <% :waiting -> %>
+                      <div class="text-gray-500 opacity-60">
+                        <Icons.minus_circle_mini />
+                      </div>
+                    <% :running -> %>
+                      <div class="text-yellow-400 opacity-60 animate-spin">
+                        <Icons.refresh_mini />
+                      </div>
+                    <% :complete -> %>
+                      <div class="text-green-400 opacity-40">
+                        <Icons.check_circle_mini />
+                      </div>
+                    <% end %>
+                  </div>
+                  <div>Step <%= tr.order_index + 1 %></div>
                 </div>
               <% end %>
             </div>
 
-            <div class="mt-2">
+            <div class="mt-3">
               <%= if run.status == :complete do %>
                 <div class="text-gray-500 text-xs">Completed <%= Calendar.strftime(run.completed_at, "%c") %></div>
               <% else %>
