--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -13,6 +13,10 @@ h1 {
     @apply text-3xl text-gray-300 font-medium;
 }
 
+h2 {
+    @apply text-2xl text-gray-300 font-medium;
+}
+
 h3 {
     @apply text-xl text-gray-400;
 }
@@ -115,6 +119,14 @@ h3 {
 
 .pill-yellow {
     @apply text-yellow-300 bg-yellow-300 bg-opacity-20;
+}
+
+.tag {
+    @apply px-1 py-0.5 text-xs text-gray-400 bg-gray-800 rounded;
+}
+
+.tag-light {
+    @apply bg-gray-700;
 }
 
 
