--- a/lib/hyacinth_web/live/pipeline_run_live/show.html.heex
+++ b/lib/hyacinth_web/live/pipeline_run_live/show.html.heex
@@ -24,18 +24,68 @@
       </div>
     </div>
 
-    <div class="mt-2">
+    <div class="mt-1">
       <div>
-        <span class="px-1 py-0.5 text-xs text-gray-400 bg-gray-800 rounded">Pipeline</span>
-        <span class="text-gray-400"><%= @pipeline_run.pipeline.name %></span>
-      </div>
-      <div>
-        <span class="px-1 py-0.5 text-xs text-gray-400 bg-gray-800 rounded">Input</span>
-        <span class="text-gray-400"><%= hd(@pipeline_run.transform_runs).input.name %></span>
+        <span class="tag">Ran by</span>
+        <span class="text-gray-400"><%= @pipeline_run.ran_by.email %></span>
       </div>
     </div>
   </div>
 </header>
 
-<main>
+<main class="mt-4">
+  <div class="space-y-4">
+    <%= for %TransformRun{} = tr <- @pipeline_run.transform_runs do %>
+      <div class="card">
+        <div class="flex items-center space-x-3">
+          <h2 class="text-gray-300">Step <%= tr.order_index + 1 %></h2>
+
+          <%= case tr.status do %>
+          <% :waiting -> %>
+            <div class="pill pill-lg pill-yellow">Waiting</div>
+          <% :running -> %>
+            <div class="pill pill-lg pill-yellow">Running</div>
+          <% :complete -> %>
+            <div class="pill pill-lg pill-green">Complete</div>
+          <% end %>
+        </div>
+
+        <div class="mt-2">
+          <table class="border-separate border-spacing-x-2 border-spacing-y-1 border-l-2 border-gray-600">
+            <tbody class="text-gray-200 text-sm">
+              <tr>
+                <td><div class="tag tag-light w-full text-center">Driver</div></td>
+                <td><%= tr.transform.driver %></td>
+              </tr>
+
+              <%= if tr.input do %>
+                <tr>
+                  <td><div class="tag tag-light w-full text-center">Input</div></td>
+                  <td><%= link tr.input.name, to: Routes.live_path(@socket, HyacinthWeb.DatasetLive.Show, tr.input), class: "link text-xs" %></td>
+                </tr>
+              <% end %>
+
+              <%= if tr.output do %>
+                <tr>
+                  <td><div class="tag tag-light w-full text-center">Output</div></td>
+                  <td><%= link tr.output.name, to: Routes.live_path(@socket, HyacinthWeb.DatasetLive.Show, tr.output), class: "link text-xs" %></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+
+        <div class="mt-3 text-xs text-gray-400">
+          <%= if tr.started_at do %>
+            <span>Started at <%= Calendar.strftime(tr.started_at, "%c") %></span>
+          <% end %>
+
+          <%= if tr.completed_at do %>
+            <span class="mx-0.5">&bull;</span>
+            <span>Completed at <%= Calendar.strftime(tr.started_at, "%c") %></span>
+          <% end %>
+        </div>
+      </div>
+    <% end %>
+  </div>
 </main>
