--- a/lib/hyacinth_web/live/pipeline_live/show.html.heex
+++ b/lib/hyacinth_web/live/pipeline_live/show.html.heex
@@ -73,9 +73,15 @@
               </div>
             </div>
 
-            <div class="mt-1 text-sm">
-              <span class="text-gray-500">Ran by</span>
-              <span class="text-gray-400"><%= run.ran_by.email %></span>
+            <div class="mt-1 text-sm text-gray-400 flex items-center">
+              <div class="text-sm">
+                <span class="text-gray-500">Ran by</span>
+                <span><%= run.ran_by.email %></span>
+              </div>
+              <%= if run.completed_at do %>
+                <div class="mx-1">&bull;</div>
+                <div><%= format_time(DateTime.diff(run.completed_at, run.inserted_at)) %></div>
+              <% end %>
             </div>
 
             <div class="mt-2 text-sm text-gray-400">
@@ -88,11 +94,11 @@
                         <Icons.minus_circle_mini />
                       </div>
                     <% :running -> %>
-                      <div class="text-yellow-400 opacity-60 animate-spin">
+                      <div class="text-yellow-400 opacity-90 animate-spin">
                         <Icons.refresh_mini />
                       </div>
                     <% :complete -> %>
-                      <div class="text-green-400 opacity-40">
+                      <div class="text-green-400 opacity-60">
                         <Icons.check_circle_mini />
                       </div>
                     <% end %>
