--- a/lib/hyacinth_web/live/pipeline_live/show.html.heex
+++ b/lib/hyacinth_web/live/pipeline_live/show.html.heex
@@ -94,7 +94,7 @@
                         <Icons.minus_circle_mini />
                       </div>
                     <% :running -> %>
-                      <div class="text-yellow-400 opacity-90 animate-spin">
+                      <div class="text-yellow-400 animate-spin">
                         <Icons.refresh_mini />
                       </div>
                     <% :complete -> %>
