Add tests for DatasetLive

--- a/lib/hyacinth_web/live/dataset_live/index.html.heex
+++ b/lib/hyacinth_web/live/dataset_live/index.html.heex
@@ -1,6 +1,6 @@
 <header>
   <div>
-    <h1 class="text-4xl">Datasets</h1>
+    <h1>Datasets</h1>
     <div class="mt-3">
       <.form let={f} for={@dataset_filter_changeset} phx-change="dataset_filter_updated">
         <div class="filter-form-content flex justify-between items-center">
