--- a/lib/hyacinth_web/live/dataset_live/show.html.heex
+++ b/lib/hyacinth_web/live/dataset_live/show.html.heex
@@ -10,7 +10,7 @@
 
   <div class="flex justify-between items-start">
     <div class="mt-2 flex items-center space-x-3">
-      <h1 class="text-3xl"><%= @dataset.name %></h1>
+      <h1><%= @dataset.name %></h1>
       <div>
         <%= case @dataset.type do %>
         <% :root -> %>
