Add tests for PipelineLive

--- a/lib/hyacinth_web/live/pipeline_live/index.html.heex
+++ b/lib/hyacinth_web/live/pipeline_live/index.html.heex
@@ -1,7 +1,7 @@
 <header>
   <div>
     <div class="flex justify-between items-center">
-      <h1 class="text-4xl">Pipelines</h1>
+      <h1>Pipelines</h1>
       <%= live_redirect to: Routes.live_path(@socket, HyacinthWeb.PipelineLive.New), class: "link-btn btn-icon btn-blue" do %>
         <Icons.plus_small_solid />
         <span>New Pipeline</span>
