Improve tab names

--- a/lib/hyacinth_web/live/dataset_live/show.html.heex
+++ b/lib/hyacinth_web/live/dataset_live/show.html.heex
@@ -29,8 +29,8 @@
 
   <div class="mt-4 text-xl border-b-2 border-gray-700">
     <div class="-mb-0.5">
-      <.tab_button cur_tab={@tab} event="set_tab" tab="jobs">Jobs</.tab_button>
-      <.tab_button cur_tab={@tab} event="set_tab" tab="objects">Objects</.tab_button>
+      <.tab_button cur_tab={@tab} event="set_tab" tab="jobs">Labeling Jobs</.tab_button>
+      <.tab_button cur_tab={@tab} event="set_tab" tab="objects">Images</.tab_button>
     </div>
   </div>
 </header>
