--- a/lib/hyacinth_web/live/label_session_live/show.html.heex
+++ b/lib/hyacinth_web/live/label_session_live/show.html.heex
@@ -52,7 +52,7 @@
 
 <main class="mt-5">
   <div class="mt-4">
-    <div class="ml-1 text-lg text-gray-300"><%= length(@label_session.elements) %> elements</div>
+    <div class="ml-1 text-lg text-gray-300"><%= length(@label_session.elements) %> <%= elements_name(@label_session.elements) %></div>
     <div class="mt-2 border border-gray-700 rounded">
       <table class="mt-1 w-full table">
         <thead>
