Improve form error messages

--- a/lib/hyacinth_web/live/pipeline_live/new.html.heex
+++ b/lib/hyacinth_web/live/pipeline_live/new.html.heex
@@ -22,7 +22,7 @@
       <div class="mt-6 flex justify-between items-center">
         <div>
           <h1>Steps</h1>
-          <div class="mt-0.5 form-content"><%= error_tag f, :transforms %></div>
+          <div class="mt-0.5 form-content"><%= error_tag f, :transforms, name: "Steps" %></div>
         </div>
       </div>
 
