--- a/lib/hyacinth_web/live/pipeline_live/new.html.heex
+++ b/lib/hyacinth_web/live/pipeline_live/new.html.heex
@@ -1,16 +1,12 @@
 <main class="mx-auto max-w-screen-lg">
-  <div>
-    <.form let={f} for={@pipeline_changeset} phx-change="validate_pipeline" phx-submit="save_pipeline">
+  <.form let={f} for={@pipeline_changeset} phx-change="validate_pipeline" phx-submit="save_pipeline" class="flex">
+    <div class="w-2/3">
       <div class="flex justify-between items-center">
         <h1>New Pipeline</h1>
-        <%= submit class: "btn btn-icon btn-blue" do %>
-          <span class="opacity-80"><Icons.bookmark_solid /></span>
-          <span>Save Pipeline</span>
-        <% end %>
       </div>
 
       <div class="mt-3 card">
-        <div class="form-content">
+        <div class="form-content form-wide">
           <p>
             <%= label f, :name %>
             <%= text_input f, :name, placeholder: "My Pipeline" %>
@@ -20,7 +16,7 @@
       </div>
 
       <div class="mt-6 flex justify-between items-center">
-        <div>
+        <div class={length(inputs_for(f, :transforms)) > 0 && "mb-2 pb-1 w-full border-b border-gray-600"}>
           <h1>Steps</h1>
           <div class="mt-0.5 form-content"><%= error_tag f, :transforms, name: "Steps" %></div>
         </div>
@@ -45,28 +41,12 @@
 
             <div class="flex items-center space-x-3">
               <h3>Step <%= i + 1 %></h3>
-              <div>
-                <div class="flex items-center space-x-1">
-                  <%= if Driver.pure?(Ecto.Changeset.get_field(ft.source, :driver)) do %>
-                    <span class="tag">any</span>
-                    <span class="text-xs text-gray-400">&rarr;</span>
-                    <span class="tag">any</span>
-                  <% else %>
-                    <span class="tag">
-                      <%= Driver.input_format(Ecto.Changeset.get_field(ft.source, :driver), Ecto.Changeset.get_field(ft.source, :options)) %>
-                    </span>
-                    <span class="text-xs text-gray-400">&rarr;</span>
-                    <span class="tag">
-                      <%= Driver.output_format(Ecto.Changeset.get_field(ft.source, :driver), Ecto.Changeset.get_field(ft.source, :options)) %>
-                    </span>
-                  <% end %>
-                </div>
-              </div>
+              <.driver_format_tags driver={Ecto.Changeset.get_field(ft.source, :driver)} options={Ecto.Changeset.get_field(ft.source, :options)} />
             </div>
 
-            <div class="card mt-1 relative">
+            <div class={["card mt-1 relative", not ft.source.valid? && "!border-red-500"]}>
               <div class="absolute top-4 right-4">
-                <button type="button" class="text-red-500 hover:text-red-600 transition" phx-click="delete_transform" phx-value-index={i}>
+                <button type="button" class="text-red-500 hover:text-red-600 opacity-90 transition" phx-click="delete_transform" phx-value-index={i}>
                   <Icons.trash_solid />
                 </button>
               </div>
@@ -78,22 +58,34 @@
                   <%= error_tag ft, :driver, always_show_errors: true %>
                 </p>
               </div>
-              <div class="mt-5 pt-4 border-t-2 border-gray-700">
+
+              <div class="mt-4">
                 <div class="flex items-center space-x-1">
-                  <div class="text-lg text-gray-300">Driver Options</div>
-                  <button type="button" class="text-blue-400 hover:text-blue-500" phx-click="edit_transform_options" phx-value-index={i}>
+                  <div class="text-gray-300">Options</div>
+                  <button
+                    type="button"
+                    class="p-0.5 text-blue-400 hover:text-blue-500 rounded focus:outline-none focus:ring-2 ring-blue-400 focus:hover:ring-blue-500 transition"
+                    phx-click="edit_transform_options"
+                    phx-value-index={i}
+                  >
                     <Icons.pencil_square_mini />
                   </button>
                 </div>
-                <div class="mt-1 text-sm">
-                  <%= for {k, v} <- Ecto.Changeset.get_field(ft.source, :options) do %>
-                    <div>
-                      <span class="text-gray-400"><%= humanize(k) %>:</span>
-                      <span><%= v %></span>
-                    </div>
-                  <% end %>
+
+                <div class="mt-1">
+                  <table class="text-sm">
+                    <tbody>
+                      <%= for {k, v} <- Ecto.Changeset.get_field(ft.source, :options) do %>
+                        <tr>
+                          <td class="pr-1 text-gray-400"><%= humanize(k) %></td>
+                          <td><%= v %></td>
+                        </tr>
+                      <% end %>
+                    </tbody>
+                  </table>
                 </div>
               </div>
+
             </div>
           </div>
         <% end %>
@@ -105,9 +97,59 @@
           <span>Add Step</span>
         </button>
       </div>
-    </.form>
-  </div>
+    </div>
+
+    <div class="mt-12 ml-6 w-1/3">
+      <div class="sticky top-2">
+
+        <div class="card">
+          <div class="text-sm text-gray-400">
+            <div class="flex items-center space-x-1">
+              <div class="text-lg">Steps</div>
+              <button
+                type="button"
+                class="p-0.5 text-blue-400 hover:text-blue-500 rounded focus:outline-none focus:ring-2 ring-blue-400 focus:hover:ring-blue-500 transition"
+                phx-click="add_transform"
+              >
+                <Icons.plus_mini />
+              </button>
+            </div>
+
+            <div class="mt-1 py-2 border-t border-b-0 border-gray-600">
+              <%= if length(Ecto.Changeset.get_field(@pipeline_changeset, :transforms)) == 0 do %>
+                <div class="text-gray-500">No steps yet</div>
+              <% end %>
+
+              <table>
+                <tbody>
+                  <%= for transform <- Ecto.Changeset.get_field(@pipeline_changeset, :transforms) do %>
+                    <tr>
+                      <td class="pr-2 text-gray-500 font-mono"><%= transform.order_index + 1 %>)</td>
+                      <td class="pr-2"><%= transform.driver %></td>
+                      <td>
+                        <.driver_format_tags driver={transform.driver} options={transform.options} light={true} />
+                      </td>
+                    </tr>
+                  <% end %>
+                </tbody>
+              </table>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="mt-3 mb-1 flex justify-start">
+          <%= submit class: "btn btn-jumbo btn-icon btn-blue" do %>
+            <span class="opacity-80"><Icons.check_circle_solid /></span>
+            <span>Save Pipeline</span>
+          <% end %>
+        </div>
+
+      </div>
+    </div>
+  </.form>
 </main>
+
 <div>
   <%= case @modal do %>
   <% {:transform_options, {index, driver, options_params}} -> %>
