--- a/lib/hyacinth_web/live/label_job_live/new.html.heex
+++ b/lib/hyacinth_web/live/label_job_live/new.html.heex
@@ -29,22 +29,40 @@
               <%= error_tag f, :dataset_id %>
             </p>
 
+            <br />
+
             <p>
               <%= label f, :name %>
-              <%= text_input f, :name, placeholder: "Job name" %>
+              <%= text_input f, :name, placeholder: "My Labeling Job" %>
               <%= error_tag f, :name %>
             </p>
 
             <p>
-              <%= label f, :type %>
-              <%= select f, :type, Ecto.Enum.values(Hyacinth.Labeling.LabelJob, :type) %>
-              <%= error_tag f, :type %>
+              <%= label f, :description %>
+              <%= text_input f, :description, placeholder: "A very cool labeling job." %>
+              <%= error_tag f, :description %>
+            </p>
+
+            <br />
+
+            <p>
+              <%= label f, :prompt %>
+              <%= text_input f, :prompt, placeholder: "How cool is this image?" %>
+              <%= error_tag f, :prompt %>
             </p>
 
             <p>
               <%= label f, :label_options_string %>
-              <%= text_input f, :label_options_string, placeholder: "Label1, Label2" %>
+              <%= text_input f, :label_options_string, placeholder: "Very, Somewhat, Only a little" %>
               <%= error_tag f, :label_options_string %>
+            </p>
+
+            <br />
+
+            <p>
+              <%= label f, :type %>
+              <%= select f, :type, Enum.map(Ecto.Enum.values(LabelJob, :type), &({LabelJobType.name(&1), &1})) %>
+              <%= error_tag f, :type %>
             </p>
 
             <div>
@@ -66,7 +84,7 @@
 
             <table class="mt-1 text-sm">
               <tbody>
-                <%= for {k, v} <- @options_params do %>
+                <%= for {k, v} <- Ecto.Changeset.get_field(@changeset, :options) do %>
                   <tr>
                     <td class="pr-1 text-gray-400"><%= humanize(k) %></td>
                     <td><%= v %></td>
